--- a/fluent-bit.conf
+++ b/fluent-bit.conf
@@ -15,6 +15,38 @@
     Time_Key    timestamp
     Time_Format %Y-%m-%dT%H:%M:%S.%LZ
 
+# Add a more detailed parser for nested JSON structures
+[PARSER]
+    Name        json_nested
+    Format      json
+    Time_Key    timestamp
+    Time_Format %Y-%m-%dT%H:%M:%S.%LZ
+    # Extract nested fields under 'extra' if they exist
+    Types level:string timestamp:time process_id:integer
+
+# Add filtering to enhance log data before sending to DataDog
+[FILTER]
+    Name           parser
+    Match          intelligent-chat-service
+    Key_Name       log
+    Parser         json_nested
+    Reserve_Data   true
+    Preserve_Key   false
+
+# Add a filter for restructuring log data and adding metadata
+[FILTER]
+    Name           modify
+    Match          intelligent-chat-service
+    # Rename fields to match DataDog conventions
+    Rename         level log_level
+    Add            app_name intelligent-chat-service
+    Add            component ${COMPONENT_NAME}
+    # Conditional enrichment based on log level
+    Condition      Key_value_matches log_level ^(ERROR|CRITICAL)$
+    Add            alert true
+    # Add standard DataDog attributes for better categorization
+    Add            version ${APP_VERSION}
+
 [OUTPUT]
     Name            datadog
     Match           *
@@ -23,4 +55,10 @@
     apikey          ${DD_API_KEY}
     dd_source       python
     dd_service      intelligent-chat-service
-    dd_tags         env:${DD_ENV}
+    # Enhanced tagging for better filtering in DataDog
+    dd_tags         env:${DD_ENV},service:intelligent-chat-service,version:${APP_VERSION}
+    # Enable compression for efficient data transfer
+    compress        gzip
+    json_date_key   timestamp
+    # Include important JSON paths for faceted search
+    json_date_format iso8601
