--- a/intelligent_chat_service/prompts/prompts.yaml
+++ b/intelligent_chat_service/prompts/prompts.yaml
@@ -1,15 +1,15 @@
 schema_version: 1.0
 metadata:
-  description: "LLM Prompts for iDiscovery"
-  project_name: "iDiscovery"
-  author: "iDiscovery"
+  description: "LLM Prompts"
+  project_name: "intelligent chat"
+  author: "intelligent chat"
   date_created: "2025-04-01"
 categories:
   agents:
     analyzer:
       id: analyzer_1.0
       prompt: |-
-        You are an expert query analyzer for iDiscovery. Your task is to analyze the user's query to determine:
+        You are an expert query analyzer for intelligent chat. Your task is to analyze the user's query to determine:
         
         1. The primary intent of the query
         2. Key entities or concepts mentioned
@@ -19,82 +19,64 @@ categories:
         
         Analyze the query thoroughly but concisely. Focus on identifying actionable elements that would help in formulating an appropriate response.
       tags: ["agents", "analyzer"]
-      structured_output:
-        type: object
-        properties:
-          intent:
-            type: string
-            description: "The primary goal or purpose of the user's query"
-            enum: ["information_seeking", "task_execution", "clarification", "comparison", "problem_solving", "other"]
-          entities:
-            type: array
-            items:
-              type: string
-            description: "Key entities, concepts, or terms identified in the query"
-          domain:
-            type: string
-            description: "The subject area or domain the query relates to"
-          complexity:
-            type: string
-            description: "Assessment of query complexity"
-            enum: ["simple", "complex", "ambiguous"]
-          constraints:
-            type: array
-            items:
-              type: string
-            description: "Any limitations, requirements or specifications mentioned"
-          confidence:
-            type: number
-            description: "Confidence score for this analysis (0.0 to 1.0)"
+    clarification:
+      id: clarification_1.0
+      prompt: |-
+        You are an expert in clarification. Your goal is to determine if there are any clarifications required for a provided user query.
+
+        Consider the following data sources:
+        <data_sources> {data_source} </data_sources>
+
+        ## Instructions:
+        1. Analyze the user query to determine if it is clear, specific, and actionable.
+        2. Consider these factors when deciding if clarification is needed:
+           - Is the query ambiguous or vague?
+           - Are there multiple possible interpretations?
+           - Are critical details missing that would be required to provide an accurate response?
+           - Does the query reference entities or concepts that need specification?
+           - Is the scope too broad to provide a focused response?
+
+        3. If clarification is needed, formulate a targeted question that:
+           - Address the specific ambiguity or missing information
+           - Are phrased concisely and clearly
+           - Will help narrow down the user's intent
+           - Are relevant to the available data sources
+           - Can be answered briefly by the user
+
+        4. If the query is already clear and no clarification is needed, indicate this and briefly explain why the query is sufficiently clear to proceed.
+
+        Remember: Only ask clarifying questions when truly necessary. If the intent is reasonably clear even without every detail, prefer to proceed rather than asking unnecessary questions.
+      tags: ["agents", "clarification"]
     planner:
       id: planner_1.0
       prompt: |-
-        You are an expert planner for iDiscovery. Your task is to break down the user's query into a clear sequence of tasks that can be executed using the available tools.
+        You are an expert planner for intelligent chat. Your task is to break down the user's query into a clear sequence of tasks that can be executed using the available tools.
 
-        First, analyze the user's request to understand the end goal. Then, create a step-by-step plan using the most appropriate tools from the options provided.
+        ## Core Context:
+        <data_sources>{data_source}</data_sources>
 
-        For each step in your plan:
-        1. Select the most appropriate tool for the task
-        2. Specify any required parameters for the tool
-        3. Explain briefly why this step is necessary
-        4. Consider dependencies between tasks
+        ## Key Principles:
+        1. Use ONLY provided tools and data sources
+        2. NEVER use external knowledge - rely exclusively on provided data
+        3. ALWAYS search data sources first for any information
 
-        Create a plan that is efficient, logical, and accomplishes the user's goal. Focus on creating tasks that can be directly executed by the available tools.
+        ## Planning Process:
+        1. Analyze the user query to understand the goal
+        2. Search through data sources for relevant information
+        3. Identify necessary tools and actions to fulfill the request
+        4. Structure tasks in a logical sequence with clear dependencies
+        5. Determine if any tasks can be executed in parallel (only when tasks are independent)
+
+        ## Task Types:
+        - Search tasks: Query data sources for information
+        - Processing tasks: Analyze or transform information
+        - Response tasks: Generate content for user presentation (must include response content)
+
+        ## Output Requirements:
+        - Each task must specify required tool and parameters
+        - Tasks must follow logical execution order
+        - Include brief explanation of each task's purpose
+        - For direct response tasks, provide complete response content
+
+        Remember: The data sources are your only source of truth. If information isn't available in the provided data sources, acknowledge this limitation rather than using external knowledge.
       tags: ["agents", "planner"]
-      structured_output:
-        type: object
-        properties:
-          plan_id:
-            type: string
-            description: "Unique identifier for this plan"
-          goal:
-            type: string
-            description: "Clear statement of what the plan aims to accomplish"
-          tasks:
-            type: array
-            items:
-              type: object
-              properties:
-                task_id:
-                  type: string
-                  description: "Unique identifier for this task"
-                tool:
-                  type: string
-                  description: "Name of the tool to use for this task"
-                description:
-                  type: string
-                  description: "Brief description of what this task does"
-                parameters:
-                  type: object
-                  description: "Parameters required by the tool"
-                dependencies:
-                  type: array
-                  items:
-                    type: string
-                  description: "IDs of tasks that must be completed before this one"
-          estimated_completion_time:
-            type: string
-            description: "Estimated time to complete all tasks (e.g., '2 minutes', '1 hour')"
-          confidence:
-            type: number
-            description: "Confidence score for this plan (0.0 to 1.0)"
