--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,13 @@ dependencies = [
     "python-dotenv (>=1.1.0,<2.0.0)",
     "fastapi (>=0.115.12,<0.116.0)",
     "loguru (>=0.7.3,<0.8.0)",
-    "openai (>=1.70.0,<2.0.0)",
     "requests (>=2.32.3,<3.0.0)",
     "aiohttp (>=3.11.16,<4.0.0)",
     "motor (>=3.7.0,<4.0.0)",
     "pyyaml (>=6.0.2,<7.0.0)",
-    "qdrant-client (>=1.13.3,<2.0.0)"
+    "qdrant-client (>=1.13.3,<2.0.0)",
+    "openai (>=1.66.5,<2.0.0)",
+    "networkx (>=3.4.2,<4.0.0)"
 ]
 
 
