--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,10 @@ dependencies = [
     "openai (>=1.66.5,<2.0.0)",
     "networkx (>=3.4.2,<4.0.0)",
     "fitz (>=0.0.1.dev2,<0.0.2)",
-    "sentence-transformers (>=4.1.0,<5.0.0)"
+    "sentence-transformers (>=4.1.0,<5.0.0)",
+    "fastembed (>=0.6.1,<0.7.0)",
+    "frontend (>=0.0.3,<0.0.4)",
+    "pymupdf (>=1.25.5,<2.0.0)"
 ]
 
 
