--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "sentence-transformers (>=4.1.0,<5.0.0)",
     "fastembed (>=0.6.1,<0.7.0)",
     "frontend (>=0.0.3,<0.0.4)",
-    "pymupdf (>=1.25.5,<2.0.0)"
+    "pymupdf (>=1.25.5,<2.0.0)",
+    "kafka-python (>=2.2.6,<3.0.0)"
 ]
 
 
